--- a/web1.html
+++ b/web1.html
@@ -59,6 +59,8 @@
           <input type="number" name="zip" placeholder="zip">
           <input type="tel" name="phone" placeholder="phone">
           <input type="email" name="email" placeholder="email">
+
+          <button type="submit">submit</button>
       
 
         </form>
