edited unorderded list

--- a/web1.html
+++ b/web1.html
@@ -75,6 +75,7 @@
         </form>
       </main>
       <section>
+      <h3>Unordered Facts</h3>  
       <h6>Shigeru Miyamoto 1981
       <ul>
         <li>Donkey Kong is a series of video games featuring the adventures of an ape like character called Donkey Kong</li>
