wrap page in a <div>

--- a/web1.html
+++ b/web1.html
@@ -4,6 +4,7 @@
     <title>Random Jan</title>
   </head>
   <body>
+    <div>
     <h1>$20 for beer and cigarettes?</h1>
     <header><img src="19830621_798543.jpg" alt="Welcome" height="1500px"></header>
     <section>
@@ -99,6 +100,6 @@
 
 
 
-
+    </div>
   </body>
 </html>
