completed HTML drills

--- a/web1.html
+++ b/web1.html
@@ -6,6 +6,7 @@
   <body>
     <div>
     <h1>$20 for beer and cigarettes?</h1>
+    <header>06.10.18</header>
     <header><img src="19830621_798543.jpg" alt="Welcome" height="1500px"></header>
     <section>
     <h2>ERIC! LISTEN!</h2>
@@ -77,7 +78,7 @@
       </main>
       <section>
       <h3>Unordered Facts</h3>  
-      <h6>Shigeru Miyamoto 1981
+      <h6><p>&copy;</p>Shigeru Miyamoto 1981 
       <ul>
         <li>Donkey Kong is a series of video games featuring the adventures of an ape like character called Donkey Kong</li>
         <li>The games of the first genre are mostly single-screen platform puzzle types, featuring Donkey Kong as the opponent in an industrial construction setting</li>
